# questionnaire-processor

./: .gitignore  DEPLOYMENT_SCENARIOS.md  Makefile  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: deploy-audio-transcriber.yml  deploy-conversation-parser.yml  deploy-file-watcher.yml  deploy-infrastructure.yml  deploy-questionnaire-processor.yml
aws/: app.py
aws/infrastructure/: infrastructure_stack.py
deployment/: package.json  requirements.txt  serverless.yml
lambdas/audio_importer/: handler.py
lambdas/audio_transcriber/: handler.py
lambdas/conversation_parser/: handler.py
lambdas/file_watcher/: handler.py
lambdas/questionnaire_processor/: handler.py
scripts/: build-service.sh  deploy.sh
services/audio-transcriber/: Dockerfile  pyproject.toml
services/audio-transcriber/src/: main.py
services/conversation-parser/: Dockerfile  pyproject.toml
services/conversation-parser/src/: main.py
services/file-watcher/: Dockerfile  pyproject.toml
services/file-watcher/src/: handler.py
services/questionnaire-processor/: Dockerfile  pyproject.toml
services/questionnaire-processor/src/: main.py
shared/aws_clients/: __init__.py
shared/database/: __init__.py  pyproject.toml
shared/database/src/: dynamodb.py  postgresql.py
shared/models/: __init__.py  pyproject.toml
shared/models/src/: conversation.py
shared/utils/: __init__.py  logger.py  pyproject.toml
shared/utils/src/: aws.py
tests/: __init__.py
