[tool.poetry]
name = "file-watcher"
version = "0.1.0"
description = "Lambda function to watch S3 for new files and queue them for processing"
authors = ["Drellia Team"]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.0"
drellia-models = {path = "../../shared/models", develop = true}
drellia-utils = {path = "../../shared/utils", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
moto = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"